# easy-buy

./: .gitignore  Dangerfile.js  README.md  ecretpassword psql -h 10.223.54.231 -p 5433 -U postgres -d easy_buy_db -c SELECT * FROM categories;  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: danger.yml
backend/: .env  Cargo.toml  README.md
backend/migrations/: 0001_create_tables.sql  0001_init.sql  0002_add_category_relation.sql  0002_create_users_table.sql  0002_update_admin_password.sql  0003_add_default_categories.sql  0003_fix_admin_password.sql  0004_recreate_admin.sql  0005_fix_admin_password.sql  20240308_add_product_images.sql  20240320000000_add_product_images.sql  20240321000000_create_product_images.sql  20240321000000_update_product_images.sql  20240322000000_remove_sensitive_data.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/api/: auth.rs  cart.rs  category.rs  mod.rs  product_images.rs  products.rs  user.rs
backend/src/config/: mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: cart.rs  category.rs  mod.rs  models.rs  product.rs  product_image.rs  user.rs
backend/src/services/: auth.rs  cart.rs  category.rs  mod.rs  product.rs  product_image.rs
docs/: architecture.md  todo.md
docs/done/: phase1.md
frontend/: middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/cart/: page.tsx
frontend/app/categories/: page.tsx
frontend/app/components/: product-card.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/products/: page.tsx
frontend/components/: ImageUpload.tsx  animated-section.tsx  cart.tsx  category-browse.tsx  featured-products.tsx  footer.tsx  hero-section.tsx  motion.tsx  navbar-wrapper.tsx  navbar.tsx  product-card.tsx  product-filters.tsx  providers.tsx
frontend/components/admin/: admin-header.tsx  admin-sidebar.tsx  dashboard-stats.tsx  product-image-upload.tsx  (+4 more)
frontend/context/: auth-context.tsx  cart-context.tsx
frontend/contexts/: auth-context.tsx  cart-context.tsx
frontend/lib/: api.ts
(+19 files in other folders)
