[package]
name = "easy-buy-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
argon2 = "0.5"
rand_core = "0.6"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.1"
