[package]
name = "easy-buy-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
rand_core = "0.6"
dotenv = "0.15"
jsonwebtoken = "9.2"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
