[package]
name = "easy-buy"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
jsonwebtoken = "9.2"
argon2 = "0.5"
validator = { version = "0.16", features = ["derive"] }
axum-extra = { version = "0.9", features = ["multipart"] }
rand_core = "0.6"
